# h5p-integration-kit

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  requirements.txt  setup.sh
django_h5p/migrations/: 0001_initial.py
examples/django/: README.md
examples/django/django_h5p/: LICENSE  __init__.py  admin.py  apps.py  models.py  pyproject.toml  settings.py  urls.py  views.py
examples/django/django_h5p/templates/django_h5p/: editor_popup.html  player.html
examples/django/django_h5p/templatetags/: h5p_tags.py
examples/django/lms_project/: urls.py
examples/django/sample_lms/: apps.py  models.py
examples/django/templates/: base.html
examples/dotnet/: Program.cs  README.md
examples/lti-provider/: README.md  app.py  requirements.txt
examples/php/: README.md  index.php
examples/python-fastapi/: README.md  app.py
examples/python-flask/: README.md  app.py
h5p-server/: Dockerfile  package-lock.json  package.json
h5p-server/src/: index.js
lms_project/: settings.py  urls.py  wsgi.py
lti_consumer/: admin.py  models.py  urls.py  views.py
lti_consumer/migrations/: 0001_initial.py  0002_h5pgrade_remove_h5pactivity_h5p_content_url_and_more.py
sample_lms/: admin.py  models.py  urls.py  views.py
templates/: base.html
templates/lti_consumer/: activity_launch.html  activity_no_content.html  activity_view.html  content_select.html
templates/sample_lms/: activity_add.html  activity_add_popup.html  activity_edit.html  activity_edit_popup.html  course_create.html  course_detail.html  course_list.html  popup_close.html
(+13 files in other folders)
