[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-h5p"
version = "0.1.0"
description = "H5P interactive content integration for Django"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chris Honselaar"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "h5p", "interactive", "content", "education", "lms"]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/chrishonselaar/django-h5p"
Repository = "https://github.com/chrishonselaar/django-h5p"
Issues = "https://github.com/chrishonselaar/django-h5p/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_h5p*"]
